# Predict-the-Introverts-from-the-Extroverts

./: .gitignore  README.md  pyproject.toml
notebooks/: autogluon.ipynb  eda.ipynb
