[project]
name = "predict-the-introverts-from-the-extroverts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autogluon-tabular>=1.3.1",
    "kaggle>=1.7.4.5",
    "pandas>=2.2.3",
    "scikit-learn>=1.6.1",
]

[dependency-groups]
dev = ["ipykernel>=6.29.5"]
